tests/copies/newAndNeedChangeTests/fail/Transient.java
package fail;

import java.lang.System;

public class Transient {

  public static void main(String[] args ) {
    String transient = "This is a transient string";
  }

}
